login, registration, and add members completed.